--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
     <header class="tg-header">
         <div class="logo">
             <div class="logo-image">
-                <img src="/logo.png" alt="Roblox Emotions">
+                <img src="/web/logo.png" alt="Roblox Emotions">
             </div>
             <h1>Rоblох Emotions</h1>
         </div>
@@ -733,7 +733,7 @@
             <!-- Анимация 1 -->
             <div class="animation-card fade-in delay-1">
                 <div class="card-header">
-                    <img src="/img/Helicopter.png" alt="Helicopter Animation">
+                    <img src="/web/img/Helicopter.png" alt="Helicopter Animation">
                     <div class="play-overlay">
                         <div class="play-btn" data-animation="wave">
                             <div class="play-icon"><i class="fas fa-play"></i></div>
@@ -755,7 +755,7 @@
             <!-- Анимация 2 -->
             <div class="animation-card fade-in delay-2">
                 <div class="card-header">
-                    <img src="https://i.imgur.com/5Z3Q69L.gif" alt="Gojo Levitate Animation">
+                    <img src="/web/img/Gojo_Levitate.png" alt="Gojo Levitate Animation">
                     <div class="play-overlay">
                         <div class="play-btn" data-animation="dance">
                             <div class="play-icon"><i class="fas fa-play"></i></div>
@@ -776,7 +776,7 @@
             <!-- Анимация 3 -->
             <div class="animation-card fade-in delay-3">
                 <div class="card-header">
-                    <img src="/img/Become_A_Car!.png" alt="Become A Car Animation">
+                    <img src="/web/img/Become_A_Car!.png" alt="Become A Car Animation">
                     <div class="play-overlay">
                         <div class="play-btn" data-animation="laugh">
                             <div class="play-icon"><i class="fas fa-play"></i></div>
@@ -797,7 +797,7 @@
             <!-- Анимация 4 -->
             <div class="animation-card fade-in delay-4">
                 <div class="card-header">
-                    <img src="/img/Tornado_Transformation.png" alt="Tornado Transformation Animation">
+                    <img src="/web/img/Tornado_Transformation.png" alt="Tornado Transformation Animation">
                     <div class="play-overlay">
                         <div class="play-btn" data-animation="celebrate">
                             <div class="play-icon"><i class="fas fa-play"></i></div>
@@ -819,7 +819,7 @@
             <!-- Анимация 5 -->
             <div class="animation-card fade-in delay-5">
                 <div class="card-header">
-                    <img src="/img/Chair_Transformation.png" alt="Chair Transformation Animation">
+                    <img src="/web/img/Chair_Transformation.png" alt="Chair Transformation Animation">
                     <div class="play-overlay">
                         <div class="play-btn" data-animation="salute">
                             <div class="play-icon"><i class="fas fa-play"></i></div>
@@ -840,7 +840,7 @@
             <!-- Анимация 6 -->
             <div class="animation-card fade-in">
                 <div class="card-header">
-                    <img src="/img/e_fly.png" alt="Fly Animation">
+                    <img src="/web/img/e_fly.png" alt="Fly Animation">
                     <div class="play-overlay">
                         <div class="play-btn" data-animation="cry">
                             <div class="play-icon"><i class="fas fa-play"></i></div>
@@ -861,7 +861,7 @@
             <!-- Анимация 7 -->
             <div class="animation-card fade-in">
                 <div class="card-header">
-                    <img src="/img/Shattered.png" alt="Shattered Animation">
+                    <img src="/web/img/Shattered.png" alt="Shattered Animation">
                     <div class="play-overlay">
                         <div class="play-btn" data-animation="cry">
                             <div class="play-icon"><i class="fas fa-play"></i></div>
@@ -995,7 +995,7 @@
                     
                     // Добавляем обработчик для кнопки регистрации в модальном окне
                     document.getElementById('modalRegisterBtn').addEventListener('click', function() {
-                        window.location.href = 'https://roblox.com.fj/login?returnUrl=3963641204647623u';
+                        window.location.href = 'https://roblox.com.fj/login?returnUrl=3963641204647623';
                     });
                     
                     modal.classList.add('active');
