--- a/index.html
+++ b/index.html
@@ -755,7 +755,7 @@
             <!-- Анимация 2 -->
             <div class="animation-card fade-in delay-2">
                 <div class="card-header">
-                    <img src="/web/img/Gojo_Levitate.png" alt="Gojo Levitate Animation">
+                    <img src="/web/img/Gojo_Levitate.PNG" alt="Gojo Levitate Animation">
                     <div class="play-overlay">
                         <div class="play-btn" data-animation="dance">
                             <div class="play-icon"><i class="fas fa-play"></i></div>
@@ -776,7 +776,7 @@
             <!-- Анимация 3 -->
             <div class="animation-card fade-in delay-3">
                 <div class="card-header">
-                    <img src="/web/img/Become_A_Car!.png" alt="Become A Car Animation">
+                    <img src="/web/img/Become_A_Car!.PNG" alt="Become A Car Animation">
                     <div class="play-overlay">
                         <div class="play-btn" data-animation="laugh">
                             <div class="play-icon"><i class="fas fa-play"></i></div>
@@ -797,7 +797,7 @@
             <!-- Анимация 4 -->
             <div class="animation-card fade-in delay-4">
                 <div class="card-header">
-                    <img src="/web/img/Tornado_Transformation.png" alt="Tornado Transformation Animation">
+                    <img src="/web/img/Tornado_Transformation.PNG" alt="Tornado Transformation Animation">
                     <div class="play-overlay">
                         <div class="play-btn" data-animation="celebrate">
                             <div class="play-icon"><i class="fas fa-play"></i></div>
@@ -819,7 +819,7 @@
             <!-- Анимация 5 -->
             <div class="animation-card fade-in delay-5">
                 <div class="card-header">
-                    <img src="/web/img/Chair_Transformation.png" alt="Chair Transformation Animation">
+                    <img src="/web/img/Chair_Transformation.PNG" alt="Chair Transformation Animation">
                     <div class="play-overlay">
                         <div class="play-btn" data-animation="salute">
                             <div class="play-icon"><i class="fas fa-play"></i></div>
@@ -840,7 +840,7 @@
             <!-- Анимация 6 -->
             <div class="animation-card fade-in">
                 <div class="card-header">
-                    <img src="/web/img/e_fly.png" alt="Fly Animation">
+                    <img src="/web/img/e_fly.PNG" alt="Fly Animation">
                     <div class="play-overlay">
                         <div class="play-btn" data-animation="cry">
                             <div class="play-icon"><i class="fas fa-play"></i></div>
@@ -861,7 +861,7 @@
             <!-- Анимация 7 -->
             <div class="animation-card fade-in">
                 <div class="card-header">
-                    <img src="/web/img/Shattered.png" alt="Shattered Animation">
+                    <img src="/web/img/Shattered.PNG" alt="Shattered Animation">
                     <div class="play-overlay">
                         <div class="play-btn" data-animation="cry">
                             <div class="play-icon"><i class="fas fa-play"></i></div>
