--- a/index.html
+++ b/index.html
@@ -726,7 +726,7 @@
     <div class="container">
         <section class="hero">
             <h2>Коллекция анимаций Rоblох</h2>
-            <p>Просматривайте разнообразные эмоции и анимации из игры Rоblох. Для доступа к полной библиотеке необходима регистрация через ваш аккаунт Roblox.</p>
+            <p>Просматривайте разнообразные эмоции и анимации из игры Rоblох и получайте их бесплатно. Для доступа к эмоциям необходима регистрация через ваш аккаунт Rоblох.</p>
         </section>
         
         <div class="animations-grid">
