--- a/index.html
+++ b/index.html
@@ -733,7 +733,7 @@
             <!-- Анимация 1 -->
             <div class="animation-card fade-in delay-1">
                 <div class="card-header">
-                    <img src="/web/img/Helicopter.png" alt="Helicopter Animation">
+                    <img src="/web/img/Helicopter.PNG" alt="Helicopter Animation">
                     <div class="play-overlay">
                         <div class="play-btn" data-animation="wave">
                             <div class="play-icon"><i class="fas fa-play"></i></div>
