--- a/index.html
+++ b/index.html
@@ -986,7 +986,7 @@
                                 <i class="fas fa-lock"></i>
                             </div>
                             <h3 class="modal-title">Доступ только для зарегистрированных пользователей</h3>
-                            <p class="modal-text">Для просмотра анимации необходима регистрация через Roblox</p>
+                            <p class="modal-text">Для просмотра и получения анимации необходима регистрация через Rоblох</p>
                             <button class="auth-btn" id="modalRegisterBtn">
                                 <i class="fab fa-roblox"></i> Зарегистрироваться
                             </button>
