--- a/index.html
+++ b/index.html
@@ -881,7 +881,7 @@
         </div>
 
         <div class="register-prompt">
-            <h2>Хотите увидеть больше анимаций?</h2>
+            <h2>Хотите увидеть и получить больше анимаций?</h2>
             <p>Зарегистрируйтесь через Rоblох, чтобы получить доступ к полной коллекции из сотен уникальных эмоций и анимаций для вашего персонажа.</p>
             <button class="prompt-btn" id="promptRegisterBtn">
                 <i class="fab fa-roblox"></i> Зарегистрироваться
