--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
     <header class="tg-header">
         <div class="logo">
             <div class="logo-image">
-                <img src="/web/logo.png" alt="Roblox Emotions">
+                <img src="/web/img/logo.PNG" alt="Roblox Emotions">
             </div>
             <h1>Rоblох Emotions</h1>
         </div>
