--- a/verifed/index.html
+++ b/verifed/index.html
@@ -644,7 +644,7 @@
         <div class="user-profile">
             <span class="username">AnimationsHub</span>
             <div class="user-avatar">
-                <img src="/avatar.PNG" alt="User Avatar">
+                <img src="/web/img/avatar.png" alt="User Avatar">
             </div>
         </div>
     </header>
