--- a/verifed/index.html
+++ b/verifed/index.html
@@ -644,7 +644,7 @@
         <div class="user-profile">
             <span class="username">AnimationsHub</span>
             <div class="user-avatar">
-                <img src="/web/img/avatar.png" alt="User Avatar">
+                <img src="/avatar.PNG" alt="User Avatar">
             </div>
         </div>
     </header>
@@ -857,10 +857,9 @@
     <footer>
         <div class="footer-content">
             <div class="footer-links">
-                <a href="https://t.me/AnimationsHub_bot?start=test">О нас</a>
-                <a href="#">Правила</a>
-                <a href="#">Контакты</a>
-                <a href="#">Поддержка</a>
+                <a href="https://t.me/AnimationsHub_bot?start=/info">О нас</a>
+                <a href="https://t.me/AnimationsHub_bot?start=/start">Правила</a>
+                <a href="https://t.me/AnimationsHub_bot?start=/contact">Поддержка</a>
             </div>
             <div class="copyright">
                 © 2025 Rоblох Emotions. Все права защищены.
