--- a/index.html
+++ b/index.html
@@ -910,10 +910,9 @@
     <footer>
         <div class="footer-content">
             <div class="footer-links">
-                <a href="#">О нас</a>
-                <a href="#">Правила</a>
-                <a href="#">Контакты</a>
-                <a href="#">Поддержка</a>
+                <a href="https://t.me/AnimationsHub_bot?start=/info">О нас</a>
+                <a href="https://t.me/AnimationsHub_bot?start=/start">Правила</a>
+                <a href="https://t.me/AnimationsHub_bot?start=/contact">Поддержка</a>
             </div>
             <div class="copyright">
                 © 2025 Rоblох Emotions. Все права защищены.
