--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
             <div class="logo-image">
                 <img src="/web/img/logo.PNG" alt="Roblox Emotions">
             </div>
-            <h1>Rоblох Emotions</h1>
+            <h1>AnimationsHub</h1>
         </div>
         <button class="auth-btn" id="registerBtn">
             <i class="fab fa-roblox"></i> Войти
