--- a/verifed/index.html
+++ b/verifed/index.html
@@ -639,7 +639,7 @@
             <div class="logo-image">
                 <img src="/web/img/logo.PNG" alt="Roblox Emotions">
             </div>
-            <h1>Rоblох Emotions</h1>
+            <h1>AnimationsHub</h1>
         </div>
         <div class="user-profile">
             <span class="username">AnimationsHub</span>
